Fix translation keys, remove unused
- Removes unused keys
- Fixes keys incorrectly referenced from templates

--- a/app/views/organized/bulk_imports/new.html.haml
+++ b/app/views/organized/bulk_imports/new.html.haml
@@ -48,7 +48,7 @@
         = link_to t(".spokecard_image_url"), style: "word-wrap: break-word;", class: "small"
       %li
         = t(".incorrect_image_on_webpage_html")
-        = link_to t(".spokecard_image_url"), style: "word-wrap: break-word;", class: "small"
+        = link_to t(".spokecard_page_url"), style: "word-wrap: break-word;", class: "small"
         %em.text-danger
           \-
           = t(".this_will_not_work")
