--- a/app/views/shared/_donate_modal.html.haml
+++ b/app/views/shared/_donate_modal.html.haml
@@ -18,4 +18,4 @@
     %p.less-strong.text-center{ style: "text-align: center;" }
       %em= t(".bikeindex_is_a_nonprofit", org_name: org_name)
 
-= render partial: "shared/modal", locals: { title: t(".thank_you"), modal_body: modal_body, id: "donateMessageModal", start_open: true}
+= render partial: "shared/modal", locals: { title: t(".thanks_for_using_bike_index"), modal_body: modal_body, id: "donateMessageModal", start_open: true}
