--- a/app/views/layouts/new_admin.html.haml
+++ b/app/views/layouts/new_admin.html.haml
@@ -2,9 +2,10 @@
 %html
   %head
     = header_tags
-    <link href="https://transloadit.edgly.net/releases/uppy/v1.2.0/uppy.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href="node_modules/@uppy/core/dist/style.css" rel="stylesheet">
+    <link href="node_modules/@uppy/dashboard/core/dist/style.css" rel="stylesheet">
 
     = javascript_pack_tag "admin_application"
     = stylesheet_pack_tag "application_css"
