--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -22,5 +22,8 @@
 footer.primary-footer {
   display: none;
 }
+
+// Uppy Styles
 @import '@uppy/core/dist/style.css';
 @import '@uppy/dashboard/dist/style.css';
+@import '@uppy/progress-bar/dist/style.css';
