--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -121,7 +121,7 @@
                         %small.em
                           - unless @bike.owner_name.present?
                             = t(".missing_owner_name")
-                          - unless @bike.registration_address.present? && @bike.registration_address["address"].present?
+                          - unless @bike.valid_registration_address_present?
                             = t(".missing_address")
 
           - if !@bike.organized?(passive_organization) # Apologize, bike isn't organizations
