--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -89,13 +89,20 @@
                       %td= t(".address")
                       %td
                         - address = @bike.registration_address
-                        - if address.present?
+                        - if @bike.valid_registration_address_present?
                           %br
                           &nbsp;&nbsp;&nbsp;
                           = address["address"]
                           %br
                           &nbsp;&nbsp;&nbsp;
-                          = "#{address['city']}, #{address['state']} #{address['zipcode']}"
+                          = [address['city'], address['state']].reject(&:blank?).join(", ")
+                          = address['zipcode']
+                        - else
+                          = address.values.join(", ")
+                          %br
+                          %span.text-warning
+                            %small invalid address
+
                   - else
                     %tr
                       %td
