--- a/app/assets/stylesheets/revised/pages/news/index.scss
+++ b/app/assets/stylesheets/revised/pages/news/index.scss
@@ -28,6 +28,7 @@
       padding: 10px 0 20px;
 
       h2 {
+        @extend .uncap;
         font-size: 23px;
         margin: 0;
         padding: 0;
