--- a/app/assets/stylesheets/revised/pages/news/show.scss
+++ b/app/assets/stylesheets/revised/pages/news/show.scss
@@ -1,4 +1,12 @@
 #news_show {
+  .blog-header {
+    h1,
+    h2,
+    h3,
+    h4 {
+      @extend .uncap;
+    }
+  }
   .post-image {
     max-width: 100%;
     max-height: 75%;
