--- a/app/views/bikes/bike_fields/_stolen_location.html.haml
+++ b/app/views/bikes/bike_fields/_stolen_location.html.haml
@@ -6,7 +6,9 @@
     %label.form-well-label
       = t(".where_was_it_stolen_type", stolen_type: stolen_type)
     .form-well-input#stolen_record_us_id{ data: { usid: Country.united_states.id } }
-      = srecord.collection_select(:country_id, Country.all, :id, :name, { required: true, prompt: t(".choose_country") }, { class: 'country-select-input form-control' } )
+      = srecord.select(:country_id, Country.select_options,
+        { required: true, prompt: t(".choose_country") },
+        { class: 'country-select-input form-control' } )
 
   .form-group.row
     %label.form-well-label
