--- a/app/views/organizations/embed.html.haml
+++ b/app/views/organizations/embed.html.haml
@@ -103,7 +103,7 @@
           .control-group.special-select-single
             = builder.label :street, 'Where was it stolen?', class: 'control-label'
             #country_select_container.controls.special-select-single
-              = builder.collection_select(:country_id, Country.all, :id, :name, prompt: 'Choose country')
+              = builder.select(:country_id, Country.select_options, prompt: 'Choose country')
           .control-group.extra-group.special-select-single
             .controls
               = builder.text_field :street, placeholder: "Intersection or address"
