--- a/app/views/organized/manage/_location_fields.html.haml
+++ b/app/views/organized/manage/_location_fields.html.haml
@@ -17,7 +17,7 @@
         = f.text_field :city, required: true, placeholder: t(".city"), class: 'form-control'
         .row.countrystatezip
           .col-sm-4.location-country-select.fancy-select.unfancy
-            = f.collection_select(:country_id, Country.all, :id, :name, prompt: t(".choose_country"))
+            = f.select(:country_id, Country.select_options, prompt: t(".choose_country"))
           .col-sm-4.fancy-select.unfancy
             = f.collection_select(:state_id, State.all, :id, :name, prompt: t(".state"), include_blank: true )
           .col-sm-4
