--- a/app/views/users/_edit_root.html.haml
+++ b/app/views/users/_edit_root.html.haml
@@ -27,7 +27,7 @@
     = f.label :country_id, class: "form-well-label" do
       = t(".address")
     .form-well-input#stolen_record_us_id{ data: { usid: Country.united_states.id } }
-      = f.collection_select(:country_id, Country.all, :id, :name, { prompt: t(".choose_country") }, { class: "country-select-input form-control" } )
+      = f.select(:country_id, Country.select_options, { prompt: t(".choose_country") }, { class: "country-select-input form-control" } )
   .form-group.row
     %label.form-well-label
     .form-well-input
