--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -82,7 +82,13 @@
           - unless @bike.type == 'bike'
             = @bike.attr_list_item(@bike.type.titleize, t(".cycle_type"), with_colon: true)
 
-          = @bike.attr_list_item(@bike.mnfg_name, t(".manufacturer"), with_colon: true)
+          %li
+            %span.attr-title #{t(".manufacturer")}:
+            / We want to display the whole manufacturer name here, not just the simple name. So only use mnfg_name if it's other (which sanitizes)
+            - if @bike.manufacturer.name == "Other"
+              = @bike.mnfg_name
+            - else
+              = @bike.manufacturer.name
           = @bike.attr_list_item(@bike.name, t(".name"), with_colon: true)
           = @bike.attr_list_item(@bike.frame_model, t(".model"), with_colon: true)
           = @bike.attr_list_item(@bike.year.to_s, t(".year"), with_colon: true)
