--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -84,7 +84,7 @@
 
           %li
             %span.attr-title #{t(".manufacturer")}:
-            / We want to display the whole manufacturer name here, not just the simple name. So only use mnfg_name if it's other (which sanitizes)
+            -# We want to display the whole manufacturer name here, not just the simple name. So only use mnfg_name if it's other (which sanitizes)
             - if @bike.manufacturer.name == "Other"
               = @bike.mnfg_name
             - else
