add rake task, add translation for sticker section

--- a/app/views/bikes/edit_bike_details.html.haml
+++ b/app/views/bikes/edit_bike_details.html.haml
@@ -108,7 +108,7 @@
             .form-group.row.no-divider-row.mb-0
               = label_tag :bike_code, class: "form-well-label" do
                 - sticker_information_link = link_to t(".a_qr_sticker"), "https://bikeindex.org/news/bike-index-unveils-new-qr-stickers-and-partnership-with-the-city-of-pa"
-                = t(".add_a_sticker_label", sticker_information_link: sticker_information_link)
+                = t(".add_a_sticker_label_html", sticker_information_link: sticker_information_link)
               .form-well-input
                 - bike_code_from_org = @bike.organizations.with_paid_feature_slugs("bike_codes").last&.bike_codes&.claimed&.reorder(:code_integer)&.second&.pretty_code
                 = text_field_tag :bike_code, nil, class: 'form-control', placeholder: bike_code_from_org || "A0 100"
