--- a/app/views/bikes/edit_bike_details.html.haml
+++ b/app/views/bikes/edit_bike_details.html.haml
@@ -94,23 +94,24 @@
 
           = render "shared/form_well_footer_save"
 
-          - if @bike.show_sticker_edit?
-            %hr
-            .related-fields.mt-4
+          %hr
+          .related-fields.mt-4
+            - if @bike.bike_codes.any?
               .form-group.row
                 %label.form-well-label
-                  Existing stickers
+                  = t(".existing_stickers")
                 %p.form-well-input-static
 
                   - @bike.bike_codes.each do |bike_code|
                     = bike_code.pretty_code
                     %br
-              .form-group.row.no-divider-row.mb-0
-                = label_tag :bike_code, class: "form-well-label" do
-                  Assign a new sticker
-                .form-well-input
-                  - bike_code_from_org = @bike.organizations.with_paid_feature_slugs("bike_codes").last&.bike_codes&.claimed&.reorder(:code_integer)&.second&.pretty_code
-                  = text_field_tag :bike_code, nil, class: 'form-control', placeholder: bike_code_from_org || "A0 100"
+            .form-group.row.no-divider-row.mb-0
+              = label_tag :bike_code, class: "form-well-label" do
+                - sticker_information_link = link_to t(".a_qr_sticker"), "https://bikeindex.org/news/bike-index-unveils-new-qr-stickers-and-partnership-with-the-city-of-pa"
+                = t(".add_a_sticker_label_html", sticker_information_link: sticker_information_link)
+              .form-well-input
+                - bike_code_from_org = @bike.organizations.with_paid_feature_slugs("bike_codes").last&.bike_codes&.claimed&.reorder(:code_integer)&.second&.pretty_code
+                = text_field_tag :bike_code, nil, class: 'form-control', placeholder: bike_code_from_org || "A0 100"
 
             = render "shared/form_well_footer_save"
 
