--- a/app/views/bikes/index.html.haml
+++ b/app/views/bikes/index.html.haml
@@ -2,14 +2,12 @@
 
 .container
   .row.first-row
-    .col-md-8
+    .col-md-12
       %h1
-        = t(".search_for_stolenness_desc_bikes", stolenness_desc: stolenness_desc)
-    .col-md-4.ad-col
-      .ad-block#top468x60
+        = t(".search_for_stolenness_desc_bikes", stolenness_desc: stolenness_desc)e
 
   .row
-    .col-md-8
+    .col-md-12
       = form_tag bikes_path, id: 'bikes_search_form', class: 'bikes-search-form', enforce_utf8: false, method: :get do
         .query-field-wrap.nojs
           - opt_vals = @selected_query_items_options.map { |i| i.is_a?(String) ? [i, i] : [i['text'], i['search_id']]  }
@@ -48,8 +46,11 @@
               %a.nav-link{ href: '#', class: ('active' if @interpreted_params[:stolenness] == 'non'), role: 'tab' }
                 = t(".not_marked_stolen")
                 %span.count
+            %li#stolenness_tab_non.nav-item{ data: { stolenness: 'non' } }
+              %a.nav-link{ href: '#', class: ('active' if @interpreted_params[:stolenness] == 'all'), role: 'tab' }
+                = t(".all")
   .row
-    .col-md-8
+    .col-md-12
       - if @bikes.present?
         %ul.bike-boxes
           = render partial: 'bikes/bike', collection: @bikes, as: :bike
