--- a/app/views/bikes/index.html.haml
+++ b/app/views/bikes/index.html.haml
@@ -4,7 +4,7 @@
   .row.first-row
     .col-md-12
       %h1
-        = t(".search_for_stolenness_desc_bikes", stolenness_desc: stolenness_desc)e
+        = t(".search_for_stolenness_desc_bikes", stolenness_desc: stolenness_desc)
 
   .row
     .col-md-12
@@ -26,29 +26,28 @@
           %span
             = t(".within")
           = hidden_field_tag :stolenness, params[:stolenness]
-      - unless params[:stolenness] == 'all'
-        .search-type-tabs
-          %ul#stolenness_tabs.nav.nav-tabs{ role: 'tablist' }
-            %li#stolenness_tab_proximity.nav-item{ data: { stolenness: 'proximity' } }
-              %a.nav-link{ href: '#', class: ('active' if @interpreted_params[:stolenness] == 'proximity'), role: 'tab' }
-                = t(".stolen_within")
-                %span#search_distance
-                  X
-                = t(".miles_of")
-                %span#search_location
-                  = t(".you")
-                %span.count
-            %li#stolenness_tab_stolen.nav-item{ data: { stolenness: 'stolen' } }
-              %a.nav-link{ href: '#', class: ('active' if @interpreted_params[:stolenness] == 'stolen'), role: 'tab' }
-                = t(".stolen_anywhere")
-                %span.count
-            %li#stolenness_tab_non.nav-item{ data: { stolenness: 'non' } }
-              %a.nav-link{ href: '#', class: ('active' if @interpreted_params[:stolenness] == 'non'), role: 'tab' }
-                = t(".not_marked_stolen")
-                %span.count
-            %li#stolenness_tab_non.nav-item{ data: { stolenness: 'non' } }
-              %a.nav-link{ href: '#', class: ('active' if @interpreted_params[:stolenness] == 'all'), role: 'tab' }
-                = t(".all")
+      .search-type-tabs
+        %ul#stolenness_tabs.nav.nav-tabs{ role: 'tablist' }
+          %li#stolenness_tab_proximity.nav-item{ data: { stolenness: 'proximity' } }
+            %a.nav-link{ href: '#', class: ('active' if @stolenness == 'proximity'), role: 'tab' }
+              = t(".stolen_within")
+              %span#search_distance
+                X
+              = t(".miles_of")
+              %span#search_location
+                = t(".you")
+              %span.count
+          %li#stolenness_tab_stolen.nav-item{ data: { stolenness: 'stolen' } }
+            %a.nav-link{ href: '#', class: ('active' if @stolenness == 'stolen'), role: 'tab' }
+              = t(".stolen_anywhere")
+              %span.count
+          %li#stolenness_tab_non.nav-item{ data: { stolenness: 'non' } }
+            %a.nav-link{ href: '#', class: ('active' if @stolenness == 'non'), role: 'tab' }
+              = t(".not_marked_stolen")
+              %span.count
+          %li#stolenness_tab_all.nav-item{ data: { stolenness: 'all' } }
+            %a.nav-link{ href: '#', class: ('active' if @stolenness == 'all'), role: 'tab' }
+              = t(".all")
   .row
     .col-md-12
       - if @bikes.present?
