--- a/app/views/organized/bikes/new.html.haml
+++ b/app/views/organized/bikes/new.html.haml
@@ -1,2 +1,2 @@
-- iframe_url = "#{ENV['BASE_URL']}/organizations/#{current_organization.slug}/embed_extended"
+- iframe_url = embed_extended_organization_url(current_organization.slug)
 <iframe src="#{iframe_url}" style="width: 100%; border: none; height: 1030px;"></iframe>
