--- a/app/views/users/_edit_root.html.haml
+++ b/app/views/users/_edit_root.html.haml
@@ -23,28 +23,30 @@
     = f.label :phone, class: "form-well-label"
     .form-well-input
       = f.text_field :phone, value: Phonifyer.display(@user.phone), class: "form-control"
-  .form-group.row.fancy-select.unfancy
-    = f.label :country_id, class: "form-well-label" do
-      = t(".address")
-    .form-well-input#stolen_record_us_id{ data: { usid: Country.united_states.id } }
-      = f.collection_select(:country_id, Country.all, :id, :name, { prompt: t(".choose_country") }, { class: "country-select-input form-control" } )
-  .form-group.row
-    %label.form-well-label
-    .form-well-input
-      = f.text_field :street, placeholder: t(".address"), class: "form-control"
-  .form-group.row
-    %label.form-well-label
-    .form-well-input
-      = f.text_field :city, placeholder: t(".city"), class: "form-control"
-  - state_class = (@user.country_id == Country.united_states.id) ? "unhidden" : ""
-  .form-group.row.fancy-select-placeholder.unfancy.hidden-other{ class: state_class }
-    %label.form-well-label
-    .form-well-input
-      = f.collection_select(:state_id, State.all, :id, :name, { include_blank: true, prompt: t(".state") }, { class: "form-control" })
-  .form-group.row.mb-4
-    %label.form-well-label
-    .form-well-input
-      = f.text_field :zipcode, placeholder: t(".zipcode"), class: "form-control"
+
+  .related-fields
+    .form-group.row.fancy-select.unfancy
+      = f.label :country_id, class: "form-well-label" do
+        = t(".address")
+      .form-well-input#stolen_record_us_id{ data: { usid: Country.united_states.id } }
+        = f.select(:country_id, Country.select_options, { prompt: t(".choose_country") }, { class: "country-select-input form-control" } )
+    .form-group.row
+      %label.form-well-label
+      .form-well-input
+        = f.text_field :street, placeholder: t(".address"), class: "form-control"
+    .form-group.row
+      %label.form-well-label
+      .form-well-input
+        = f.text_field :city, placeholder: t(".city"), class: "form-control"
+    - state_class = (@user.country_id == Country.united_states.id) ? "unhidden" : ""
+    .form-group.row.fancy-select-placeholder.unfancy.hidden-other{ class: state_class }
+      %label.form-well-label
+      .form-well-input
+        = f.collection_select(:state_id, State.all, :id, :name, { include_blank: true, prompt: t(".state") }, { class: "form-control" })
+    .form-group.row.mb-4
+      %label.form-well-label
+      .form-well-input
+        = f.text_field :zipcode, placeholder: t(".zipcode"), class: "form-control"
 
   - if Flipper.enabled?(:localization, current_user)
     .form-group.row.fancy-select.unfancy
