add facebook pixel for bikes

--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -208,3 +208,6 @@
               %a{ href: "tel:#{@stolen_record.phone}" }
                 = @stolen_record.phone_display
       .ad-block#right300x600
+
+
+= render partial: "/shared/facebook_pixel"
