--- a/app/javascript/stylesheets/_admin.scss
+++ b/app/javascript/stylesheets/_admin.scss
@@ -183,4 +183,9 @@
     width: 85px;
     height: auto;
   }
+  max-height: 165px;
+  font-size: 12px;
+  @include media-breakpoint-down(sm) {
+    max-height: 100%;
+  }
 }
