--- a/app/views/admin/news/_public_image.html.haml
+++ b/app/views/admin/news/_public_image.html.haml
@@ -2,10 +2,10 @@
 .card.bg-light.admin-public-image
   .card-body
     .row
-      .col-md-2.mt-auto
+      .col-md-2.col-sm-6.mt-auto
         %p
           = public_image.name.truncate(18)
-      .col-md-8
+      .col-md-8.col-sm-6.mt-auto
         - if public_image.imageable_type != 'Blog'
           %textarea.form-control
             \&lt;img class="post-image" src="#{public_image.image_url}" alt="ENTER YOUR TEXT HERE"&gt;
@@ -13,12 +13,12 @@
         - else
           %textarea.form-control
             \&lt;img class="post-image" src="#{public_image.image_url}" alt="ENTER YOUR TEXT HERE"&gt;
-      .col-md-2
+      .col-md-2.col-sm-12
         = image_tag(public_image.image_url(:small)) if public_image.image?
     %hr
     .row.mt-2
       .col-md-2
-        = link_to "Delete", public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete, class: "btn btn-danger"
+        = link_to "Delete", public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete
       .col-md-8
         %p
           %span
