--- a/app/views/customer_mailer/additional_email_confirmation.html.haml
+++ b/app/views/customer_mailer/additional_email_confirmation.html.haml
@@ -1,19 +1,16 @@
 %h2.center-text
-  Please confirm your additional email
+  = t(".please_confirm_your_additional_email")
   %br
   %small
-    %em
-      = @user_email.email
+    %em= @user_email.email
 
 %p.center-text{ style: 'margin-bottom: 3em;' }
-  #{@user.display_name} would like to merge this email into their account (#{@user.email}).
+  = t(".user_would_like_to_merge", name: @user.display_name, email: @user.email)
 
-= link_to 'Verify email', confirm_user_email_url(id: @user_email.id, confirmation_token: @user_email.confirmation_token), class: 'binx-button'
+= link_to t(".verify_email"), confirm_user_email_url(id: @user_email.id, confirmation_token: @user_email.confirmation_token), class: 'binx-button'
 
-%p.center-text.less-strong
-  Click the <em>Verify email</em> button to merge these accounts on BikeIndex.org!
+%p.center-text.less-strong= t(".click_verify_email_html")
 
 %hr
 
-%p.center-text
-  If you didn't request this merge please reply to this email and tell us.
+%p.center-text= t(".if_you_didnt_request_this")
