--- a/app/views/organized_mailer/finished_registration.text.haml
+++ b/app/views/organized_mailer/finished_registration.text.haml
@@ -1,59 +1,61 @@
-- sentence_prefix = "#{ @bike.stolen && @bike.recovered  ? 'recovered/found ' : 'stolen ' }#{ @bike.type } to Bike Index#{ ' for you' unless @vars[:registered_by_owner] }:"
-- if @vars[:registered_by_owner]
-  You added a #{ sentence_prefix }
-- else
-  = @creation_org.present? ? @creation_org.name : @ownership.creator.display_name
-  - if @vars[:new_registration]
-    added a #{ sentence_prefix }
-  - else
-    sent you a #{ sentence_prefix }
-
-
+- org_name = @creation_org&.name || @ownership&.creator&.display_name
 - bike_url = ownership_url(@ownership)
+- frame_colors = @bike.frame_colors
 
-\---------------------------------------------------------------
+- bike_type = if @bike.stolen? && @bike.recovered?
+  - t(".text.recovered_biketype", biketype: @bike.type)
+- else
+  - t(".text.stolen_biketype", biketype: @bike.type)
 
-Make: #{ @bike.mnfg_name }
+- case
+- when @vars[:registered_by_owner]
+  = t(".text.you_added_a_bike_type_on_bike_index", bike_type: bike_type)
+- when @vars[:new_registration]
+  = t(".text.org_added_a_bike", org_name: org_name, bike_type: bike_type)
+- else
+  = t(".text.org_sent_a_bike", org_name: org_name, bike_type: bike_type)
 
-Serial: #{ @bike.serial_number }
+= "\n"
 
-Color#{ 's' if @bike.frame_colors.count > 1 }: #{ @bike.frame_colors.to_sentence }
+= t(".text.bike_make", bike_mnfg_name: @bike.mnfg_name)
+= t(".text.bike_serial", bike_serial_number: @bike.serial_number)
+= t(".text.bike_colors", frame_colors: frame_colors.to_sentence)
 
 - if @bike.stolen
   - stolen_record = @bike.current_stolen_record
-  #{ @bike.recovered ? 'Found:' : 'Stolen from:' }#{ stolen_record.address(skip_default_country: true) }
+  - if @bike.recovered?
+    = t(".text.bike_found_at", address: stolen_record.address(skip_default_country: true))
+  - else
+    = t(".text.bike_stolen_from", address:  stolen_record.address(skip_default_country: true))
 
-  Date: #{ l stolen_record.date_stolen, format: :dotted }
+  = t(".text.bike_date", date: l(stolen_record.date_stolen, format: :dotted))
 
 - if (@bike.ownerships.count == 1 && @bike.registered_new)
-  Color may be incorrect. Claim your bike and update it if necessary!
-
-\---------------------------------------------------------------
+  = t(".text.color_may_be_incorrect")
+  = "\n"
 
 - if @bike.stolen
   - if @bike.recovered
-    Hopefully you find the owner soon.
-  - else 
-    Hopefully you find the #{ @bike.type } soon.
-  
-  Give us a heads up when you do (#{ edit_bike_url(@bike) })
+    = t(".text.hopefully_you_find_the_owner_soon")
+  - else
+    = t(".text.hopefully_you_find_the_biketype_soon", biketype: @bike.type)
+
+  = t(".text.give_us_a_heads_up_when_you_do", bike_edit_url: edit_bike_url(@bike))
 
 - unless @ownership.claimed
-  Claim the #{ @bike.type } at this URL: #{ bike_url }
-
-  Sign up on BikeIndex.org to claim your #{ @bike.type }
-
-  Edit it, upload photos and make sure you never lose track of your trusty steed!
+  = t(".text.claim_the_biketype_at_this_url", biketype: @bike.type, bike_url: bike_url)
+  = t(".text.sign_up_on_bikeindex_to_claim", biketype: @bike.type)
+  = t(".text.edit_it_upload_photos")
 
 - unless @bike.recovered
-  \---------------------------------------------------------------
+  = "\n"
 
-  Protect your bike by following these locking guidelines.
+  = t(".text.protect_your_bike")
+  = "\n"
 
-  \- *Use a U-Lock.* Cable locks should never be used as a primary means of locking a bike in a city.
+  = t(".text.use_a_ulock")
+  = t(".text.secure_both_wheels")
+  = t(".text.before_locking_check")
+  = "\n"
 
-  \- Secure both wheels - either with two U-locks, or one U-lock and one heavy duty cable.
-
-  \- Before locking, check that what you are locking to can't be easily removed.
-  
-  Read more here: #{ protect_your_bike_url }
+  = t(".text.read_more_here", protect_your_bike_url: protect_your_bike_url)
