--- a/app/views/organized_mailer/partial_registration.text.haml
+++ b/app/views/organized_mailer/partial_registration.text.haml
@@ -1,7 +1,7 @@
-You’re Almost Done!
+= t(".youre_almost_done")
 
-You’re just a few steps away from registering your bike on the world’s most comprehensive bike registry.
+= t(".youre_just_a_few_steps_away_from_register")
 
-Go to the following URL to finish:
+= t(".go_to_the_following_url_to_finish")
 
 = new_bike_url(b_param_token: @b_param.id_token)
