--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -7,9 +7,9 @@
     .sign-in-up-wrap
       .row
         .oauth-providers
-          %a.facebook-login{ href: '/auth/facebook' }
-            %span.oauth-logo-block= image_tag 'revised/facebook_login.svg'
-            %span.oauth-text-block= t(".sign_up_using_facebook")
+          / %a.facebook-login{ href: '/auth/facebook' }
+          /   %span.oauth-logo-block= image_tag 'revised/facebook_login.svg'
+          /   %span.oauth-text-block= t(".sign_up_using_facebook")
 
           %a.strava-login{ href: '/auth/strava' }
             %span.oauth-logo-block= image_tag 'revised/strava_login.svg'
